JN-1055 . cleanup